Fix: iOS.html 수정

--- a/resources-iOS/iOS.html
+++ b/resources-iOS/iOS.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iOS Documentation</title>
+    <script>
+        window.location.href = './PhoneSafeFramework.doccarchive/index.html';
+    </script>
 </head>
 <body>
-    <h1>iOS SDK Documentation</h1>
-    <iframe src="PhoneSafeFramework.doccarchive/index.html" width="100%" height="600px"></iframe>
+    <p>If you are not redirected, <a href="./PhoneSafeFramework.doccarchive/index.html">click here</a> to view the iOS documentation.</p>
 </body>
 </html>
