Revert "Fix; 경로를 변경함."
This reverts commit 4d8aae497cd4f228b38ddb95cd866d0d99bdc5e1.

--- a/resources-iOS/iOS.html
+++ b/resources-iOS/iOS.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iOS Documentation</title>
     <script>
-    window.location.href = 'https://jhleeaton.github.io/resources-iOS/PhoneSafeFramework.doccarchive/index.html';
+        window.location.href = './PhoneSafeFramework.doccarchive/index.html';
     </script>
 </head>
 <body>
