--- a/resources-iOS/PhoneSafeFramework.doccarchive/index.html
+++ b/resources-iOS/PhoneSafeFramework.doccarchive/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-    <base href="/PhoneSafeFramework.doccarchive/">
+    <base href="./">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
