FIx: index.html 수정

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<script>window.location.href += "/documentation/phonesafeframework"</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<script>window.location.href += "/documentation/phonesafeframework"</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SDK Documentation</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        .button {
+            display: inline-block;
+            margin: 10px;
+            padding: 15px 25px;
+            font-size: 16px;
+            cursor: pointer;
+            text-align: center;
+            text-decoration: none;
+            outline: none;
+            color: #fff;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0 9px #999;
+        }
+        .button:hover {background-color: #3e8e41}
+        .button:active {
+            background-color: #3e8e41;
+            box-shadow: 0 5px #666;
+            transform: translateY(4px);
+        }
+    </style>
+</head>
+<body>
+    <h1>SDK Documentation</h1>
+    <p>Welcome to the SDK documentation page. Choose your platform to get started:</p>
+    <a href="resources-iOS/iOS.html" class="button">iOS</a>
+    <a href="resources-android/android.html" class="button">Android</a>
+</body>
+</html>
